--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,6 @@
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/common.js"></script>
-
+	<!-- abasiuk комментарий 1 -->
 </body>
 </html>
